test_suite/tests/ui/string/validate/unknown.stderr
error: Unknown validator `unique`.
       Possible values are `min_len`, `max_len`, `not_empty`, `predicate`, `regex`.
 --> tests/ui/string/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(unique))]
  |                   ^^^^^^
